--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me - Chakila</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="21.png">
 </head>
 <body>
 
@@ -22,7 +23,7 @@
 <section class="about">
   <h2>Who I Am</h2>
   <div class="about-container">
-    <img src="C:\Users\chakila\Pictures/5.png" alt="Chakila">
+    <img src="5.png"height="300px" width="600px" alt="Chakila">
     <div class="about-text">
       <p>I am Chakila, a passionate Software Developer with expertise in web development. I specialize in building modern, responsive, and user-friendly websites using HTML, CSS, PHP, and JavaScript.</p>
       <p>My goal is to combine creativity and technology to develop websites and applications that are both functional and visually appealing. I enjoy learning new technologies and solving real-world problems efficiently.</p>
